--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,14 @@ tests =
 all =
   %(tests)s
 
+docs =
+  sphinx ~= 5.0
+  pydata-sphinx-theme
+  sphinx_automodapi
+  numpydoc
+
 # and one for developers that includes even more
 dev =
   %(all)s
+  %(docs)s
   setuptools_scm
