--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ python_requires = >=3.8
 
 [options.packages.find]
 where = src
+exclude = project_template_python_pure._dev_version
 
 [options.extras_require]
 tests =
