--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,27 @@ jobs:
   tests:
     strategy:
       matrix:
-        python-version:
-          - "3.8"
-          - "3.9"
-          - "3.10"
-          - "3.11"
-        os:
-          - ubuntu-latest
-          - macos-latest
+        include:
+          # linux builds
+          - python-version: "3.8"
+            os: ubuntu-latest
+
+          - python-version: "3.9"
+            os: ubuntu-latest
+
+          - python-version: "3.10"
+            os: ubuntu-latest
+
+          - python-version: "3.11"
+            os: ubuntu-latest
+            extra-args: ['codecov']
+
+          # macos builds
+          - python-version: "3.10"
+            os: macos-latest
+
+          - python-version: "3.11"
+            os: macos-latest
 
     runs-on: ${{ matrix.os }}
 
@@ -77,7 +90,8 @@ jobs:
             --ignore-glob="*/_dev_version" \
             -v
 
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
+        if: contains(matrix.extra-args, 'codecov')
 
   docs:
     runs-on: ubuntu-latest
