--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "template"
+name = "project-template-python-pure"
 description = "Template for a pure python package"
 readme = "README.md"
 license = {text = "BSD-3-Clause"}
