--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,16 +5,17 @@ stages:
   - test
   - deploy
 
-flake8:
+static:
   stage: static-checks
   image: "python:3.8"
 
   before_script:
+    - apt update && apt install -y --no-install-recommends git
     - python --version
-    - pip install flake8
+    - pip install pre-commit
 
   script:
-    - flake8 src/
+    - pre-commit run --all-files
 
 tests:
   stage: test
